gotify/gotify.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: gotify
  name: gotify
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gotify
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gotify
    spec:
      containers:
        - name: gotify
          image: ghcr.io/gotify/server:3.1.1@sha256:44fc5bbd1c0618878e33073d38c2c13126b48f245c3fe12236b1da48eb203b86
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: gotify-data
              mountPath: /var/gotify/data
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: gotify-data
          persistentVolumeClaim:
            claimName: gotify-data
